deploy: 6f11ddf42aca73d20a06b022e26a593aebd97475

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "423ddf8a",
+   "id": "41c36ca9",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19431f0",
+   "id": "64ce8ee3",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea1f03f",
+   "id": "ebe87738",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c07c32",
+   "id": "49eeef6d",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fedaa298",
+   "id": "09a70edc",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8707fa80",
+   "id": "94d179b7",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "749f0d3b",
+   "id": "a41b214e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:34:57.273478Z",
-     "iopub.status.busy": "2025-02-03T09:34:57.273304Z",
-     "iopub.status.idle": "2025-02-03T09:35:00.396867Z",
-     "shell.execute_reply": "2025-02-03T09:35:00.396317Z"
+     "iopub.execute_input": "2025-02-03T10:50:24.670980Z",
+     "iopub.status.busy": "2025-02-03T10:50:24.670773Z",
+     "iopub.status.idle": "2025-02-03T10:50:27.980683Z",
+     "shell.execute_reply": "2025-02-03T10:50:27.980048Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c87585c",
+   "id": "b2c92255",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cbf9a0e",
+   "id": "7637d829",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9c8e0f",
+   "id": "0fc4493e",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a752e10a",
+   "id": "a0b8f13e",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6756ab4",
+   "id": "acbf431b",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562d0518",
+   "id": "4eac8b95",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca25f80",
+   "id": "7e49e6a0",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b6fdf1",
+   "id": "384af654",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "597b6130",
+   "id": "c6f24f9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:00.398982Z",
-     "iopub.status.busy": "2025-02-03T09:35:00.398709Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.466751Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.466114Z"
+     "iopub.execute_input": "2025-02-03T10:50:27.983305Z",
+     "iopub.status.busy": "2025-02-03T10:50:27.982832Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.041281Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.040741Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d3b559",
+   "id": "4ada68d0",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "338f30a7",
+   "id": "c9f88447",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.468647Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.468455Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.472302Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.471642Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.043214Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.042999Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.046649Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.046098Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80dc3433",
+   "id": "33a21ed2",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffecf70f",
+   "id": "b4b387ec",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f932d9f7",
+   "id": "624e2520",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b98670b",
+   "id": "757eefe5",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f96247a",
+   "id": "c27a4404",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.474213Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.473892Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.517942Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.517444Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.048365Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.048188Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.094566Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.093995Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "287ebb7b",
+   "id": "f88600ff",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "34ec5901",
+   "id": "67ff938e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.519963Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.519593Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.591798Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.591259Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.096531Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.096335Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.166306Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.165690Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b29db3",
+   "id": "80e4d125",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c4cc4c2",
+   "id": "7fde044e",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "06254ae1",
+   "id": "3bba1137",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.593837Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.593465Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.620307Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.619783Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.168471Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.168097Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.196178Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.195567Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bd8c22",
+   "id": "6236e0e3",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f7c0e3e",
+   "id": "b048859f",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b22dc1",
+   "id": "5866e47e",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085e85f6",
+   "id": "f365f06f",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa9c9ad0",
+   "id": "0546aba0",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3da5957e",
+   "id": "2686427f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.622495Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.622102Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.626322Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.625743Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.198396Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.197935Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.202340Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.201715Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7606fab5",
+   "id": "3883fe97",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e7455353",
+   "id": "23bd6a02",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.628139Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.627789Z",
-     "iopub.status.idle": "2025-02-03T09:35:02.630743Z",
-     "shell.execute_reply": "2025-02-03T09:35:02.630287Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.204308Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.203964Z",
+     "iopub.status.idle": "2025-02-03T10:50:30.206871Z",
+     "shell.execute_reply": "2025-02-03T10:50:30.206408Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9b59d4",
+   "id": "f4ee539c",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "747a4d10",
+   "id": "c01f5e5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:02.632336Z",
-     "iopub.status.busy": "2025-02-03T09:35:02.632121Z",
-     "iopub.status.idle": "2025-02-03T09:35:05.230380Z",
-     "shell.execute_reply": "2025-02-03T09:35:05.229776Z"
+     "iopub.execute_input": "2025-02-03T10:50:30.208784Z",
+     "iopub.status.busy": "2025-02-03T10:50:30.208455Z",
+     "iopub.status.idle": "2025-02-03T10:50:32.750144Z",
+     "shell.execute_reply": "2025-02-03T10:50:32.749605Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "630dce15",
+   "id": "dfba7a73",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a462fd",
+   "id": "c4029f72",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26fbd5ab",
+   "id": "16b0f1bd",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47fa13b0",
+   "id": "4a24fa84",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2d2f0f1d",
+   "id": "d32d47a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:05.232381Z",
-     "iopub.status.busy": "2025-02-03T09:35:05.232173Z",
-     "iopub.status.idle": "2025-02-03T09:35:05.235686Z",
-     "shell.execute_reply": "2025-02-03T09:35:05.235216Z"
+     "iopub.execute_input": "2025-02-03T10:50:32.752041Z",
+     "iopub.status.busy": "2025-02-03T10:50:32.751836Z",
+     "iopub.status.idle": "2025-02-03T10:50:32.755373Z",
+     "shell.execute_reply": "2025-02-03T10:50:32.754893Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f9fb0b20a40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f30a4618a40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fafb2fc",
+   "id": "eb076443",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e24da3d",
+   "id": "bbf47617",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4883b279",
+   "id": "0a6683ac",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3457b8d0",
+   "id": "5bdddb1b",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1696cee6",
+   "id": "c97f3f9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:05.237528Z",
-     "iopub.status.busy": "2025-02-03T09:35:05.237216Z",
-     "iopub.status.idle": "2025-02-03T09:35:05.240367Z",
-     "shell.execute_reply": "2025-02-03T09:35:05.239857Z"
+     "iopub.execute_input": "2025-02-03T10:50:32.757133Z",
+     "iopub.status.busy": "2025-02-03T10:50:32.756959Z",
+     "iopub.status.idle": "2025-02-03T10:50:32.759786Z",
+     "shell.execute_reply": "2025-02-03T10:50:32.759248Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4c2f2ef8",
+   "id": "0598ec74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T09:35:05.241932Z",
-     "iopub.status.busy": "2025-02-03T09:35:05.241759Z",
-     "iopub.status.idle": "2025-02-03T09:35:06.299338Z",
-     "shell.execute_reply": "2025-02-03T09:35:06.298710Z"
+     "iopub.execute_input": "2025-02-03T10:50:32.761503Z",
+     "iopub.status.busy": "2025-02-03T10:50:32.761159Z",
+     "iopub.status.idle": "2025-02-03T10:50:33.819441Z",
+     "shell.execute_reply": "2025-02-03T10:50:33.818935Z"
     }
    },
    "outputs": [
