deploy: 33a97e0ae2a229cc6cdaa6c3a05dd5ba7825aec6

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41c36ca9",
+   "id": "6f30cd88",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64ce8ee3",
+   "id": "c0244780",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe87738",
+   "id": "1fbd14f8",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49eeef6d",
+   "id": "a43e3801",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a70edc",
+   "id": "c940c1e2",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94d179b7",
+   "id": "ba711ae4",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a41b214e",
+   "id": "a5ee34f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:24.670980Z",
-     "iopub.status.busy": "2025-02-03T10:50:24.670773Z",
-     "iopub.status.idle": "2025-02-03T10:50:27.980683Z",
-     "shell.execute_reply": "2025-02-03T10:50:27.980048Z"
+     "iopub.execute_input": "2025-02-03T13:12:56.145148Z",
+     "iopub.status.busy": "2025-02-03T13:12:56.144977Z",
+     "iopub.status.idle": "2025-02-03T13:12:59.093619Z",
+     "shell.execute_reply": "2025-02-03T13:12:59.093122Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2c92255",
+   "id": "d3ca68bd",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7637d829",
+   "id": "1a6f7b4f",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fc4493e",
+   "id": "c08bafcf",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b8f13e",
+   "id": "4de69d79",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acbf431b",
+   "id": "4e746505",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eac8b95",
+   "id": "ff5a9c1e",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e49e6a0",
+   "id": "36f50042",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384af654",
+   "id": "76e84038",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c6f24f9b",
+   "id": "e93c7562",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:27.983305Z",
-     "iopub.status.busy": "2025-02-03T10:50:27.982832Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.041281Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.040741Z"
+     "iopub.execute_input": "2025-02-03T13:12:59.095722Z",
+     "iopub.status.busy": "2025-02-03T13:12:59.095439Z",
+     "iopub.status.idle": "2025-02-03T13:13:00.936141Z",
+     "shell.execute_reply": "2025-02-03T13:13:00.935632Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ada68d0",
+   "id": "42f24138",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c9f88447",
+   "id": "7b4e170a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.043214Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.042999Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.046649Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.046098Z"
+     "iopub.execute_input": "2025-02-03T13:13:00.937900Z",
+     "iopub.status.busy": "2025-02-03T13:13:00.937716Z",
+     "iopub.status.idle": "2025-02-03T13:13:00.941392Z",
+     "shell.execute_reply": "2025-02-03T13:13:00.940763Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33a21ed2",
+   "id": "f9271434",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b387ec",
+   "id": "42d4b259",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "624e2520",
+   "id": "cfc19de9",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "757eefe5",
+   "id": "f2330be6",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c27a4404",
+   "id": "70a5a47f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.048365Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.048188Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.094566Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.093995Z"
+     "iopub.execute_input": "2025-02-03T13:13:00.943288Z",
+     "iopub.status.busy": "2025-02-03T13:13:00.942952Z",
+     "iopub.status.idle": "2025-02-03T13:13:00.984490Z",
+     "shell.execute_reply": "2025-02-03T13:13:00.984016Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f88600ff",
+   "id": "c0ba2a9a",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67ff938e",
+   "id": "72c99e4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.096531Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.096335Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.166306Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.165690Z"
+     "iopub.execute_input": "2025-02-03T13:13:00.986196Z",
+     "iopub.status.busy": "2025-02-03T13:13:00.986018Z",
+     "iopub.status.idle": "2025-02-03T13:13:01.051874Z",
+     "shell.execute_reply": "2025-02-03T13:13:01.051278Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80e4d125",
+   "id": "0680d700",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fde044e",
+   "id": "23d9921a",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3bba1137",
+   "id": "7736f8a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.168471Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.168097Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.196178Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.195567Z"
+     "iopub.execute_input": "2025-02-03T13:13:01.053821Z",
+     "iopub.status.busy": "2025-02-03T13:13:01.053467Z",
+     "iopub.status.idle": "2025-02-03T13:13:01.080011Z",
+     "shell.execute_reply": "2025-02-03T13:13:01.079420Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6236e0e3",
+   "id": "da6a1085",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b048859f",
+   "id": "f61a3653",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5866e47e",
+   "id": "d8095611",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f365f06f",
+   "id": "a01a763c",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0546aba0",
+   "id": "0f44a664",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2686427f",
+   "id": "bb8a5fa3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.198396Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.197935Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.202340Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.201715Z"
+     "iopub.execute_input": "2025-02-03T13:13:01.082027Z",
+     "iopub.status.busy": "2025-02-03T13:13:01.081842Z",
+     "iopub.status.idle": "2025-02-03T13:13:01.085890Z",
+     "shell.execute_reply": "2025-02-03T13:13:01.085427Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3883fe97",
+   "id": "2eee3cfe",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "23bd6a02",
+   "id": "0b832457",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.204308Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.203964Z",
-     "iopub.status.idle": "2025-02-03T10:50:30.206871Z",
-     "shell.execute_reply": "2025-02-03T10:50:30.206408Z"
+     "iopub.execute_input": "2025-02-03T13:13:01.087423Z",
+     "iopub.status.busy": "2025-02-03T13:13:01.087246Z",
+     "iopub.status.idle": "2025-02-03T13:13:01.090126Z",
+     "shell.execute_reply": "2025-02-03T13:13:01.089556Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ee539c",
+   "id": "637eda08",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c01f5e5d",
+   "id": "473aba6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:30.208784Z",
-     "iopub.status.busy": "2025-02-03T10:50:30.208455Z",
-     "iopub.status.idle": "2025-02-03T10:50:32.750144Z",
-     "shell.execute_reply": "2025-02-03T10:50:32.749605Z"
+     "iopub.execute_input": "2025-02-03T13:13:01.091898Z",
+     "iopub.status.busy": "2025-02-03T13:13:01.091535Z",
+     "iopub.status.idle": "2025-02-03T13:13:03.590507Z",
+     "shell.execute_reply": "2025-02-03T13:13:03.590025Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfba7a73",
+   "id": "f494f94a",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4029f72",
+   "id": "d7cba676",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16b0f1bd",
+   "id": "0270efed",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a24fa84",
+   "id": "0c42ba1b",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d32d47a9",
+   "id": "46936f76",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:32.752041Z",
-     "iopub.status.busy": "2025-02-03T10:50:32.751836Z",
-     "iopub.status.idle": "2025-02-03T10:50:32.755373Z",
-     "shell.execute_reply": "2025-02-03T10:50:32.754893Z"
+     "iopub.execute_input": "2025-02-03T13:13:03.592357Z",
+     "iopub.status.busy": "2025-02-03T13:13:03.592173Z",
+     "iopub.status.idle": "2025-02-03T13:13:03.596077Z",
+     "shell.execute_reply": "2025-02-03T13:13:03.595401Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f30a4618a40>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f49bc1049a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb076443",
+   "id": "5560987e",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf47617",
+   "id": "2006bc95",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a6683ac",
+   "id": "7b754a8a",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bdddb1b",
+   "id": "a85c011e",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c97f3f9b",
+   "id": "ea1bcf25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:32.757133Z",
-     "iopub.status.busy": "2025-02-03T10:50:32.756959Z",
-     "iopub.status.idle": "2025-02-03T10:50:32.759786Z",
-     "shell.execute_reply": "2025-02-03T10:50:32.759248Z"
+     "iopub.execute_input": "2025-02-03T13:13:03.598007Z",
+     "iopub.status.busy": "2025-02-03T13:13:03.597661Z",
+     "iopub.status.idle": "2025-02-03T13:13:03.600434Z",
+     "shell.execute_reply": "2025-02-03T13:13:03.599996Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0598ec74",
+   "id": "b5e10626",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-03T10:50:32.761503Z",
-     "iopub.status.busy": "2025-02-03T10:50:32.761159Z",
-     "iopub.status.idle": "2025-02-03T10:50:33.819441Z",
-     "shell.execute_reply": "2025-02-03T10:50:33.818935Z"
+     "iopub.execute_input": "2025-02-03T13:13:03.601971Z",
+     "iopub.status.busy": "2025-02-03T13:13:03.601799Z",
+     "iopub.status.idle": "2025-02-03T13:13:04.654217Z",
+     "shell.execute_reply": "2025-02-03T13:13:04.653589Z"
     }
    },
    "outputs": [
